name:                   dbf
version:                0.0.0.2
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/dbf

category:               Database
synopsis:               Read and write XBase ".dbf" files
description:            A simple interface for reading and writing XBase dbf
                        files.  Provides whole-file parser and serializer as
                        well as a handle-based interface for reading and writing
                        records from a file.

source-repository head
  type:                 git
  location:             https://github.com/mokus0/dbf.git

Library
  hs-source-dirs:       src
  exposed-modules:      Database.XBase.Dbf
                        Database.XBase.Dbf.Handle
                        Database.XBase.Dbf.Structures
                        Database.XBase.Dbf.Year8
  build-depends:        base >= 3 && <5, binary, bytestring, rwlock, monad-loops
